<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" ><LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_pay_external_linearlayout_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_pay_external_linearlayout_margin"
                android:text="@string/item_pay_external_goods_name"
                android:textColor="@color/itemPayExternalTextLeft"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/product_subject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/item_pay_external_test_goods"
                android:textColor="@color/itemPayExternalTextRight"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_pay_external_linearlayout_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_pay_external_linearlayout_margin"
                android:text="@string/item_pay_external_goods_describe"
                android:textColor="@color/itemPayExternalTextLeft"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/item_pay_external_test_goods_describe"
                android:textColor="@color/itemPayExternalTextRight"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_pay_external_linearlayout_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_pay_external_linearlayout_margin"
                android:text="@string/item_pay_external_goods_price"
                android:textColor="@color/itemPayExternalTextLeft"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/item_pay_external_price"
                android:textColor="@color/itemPayExternalTextPrice"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <Button
            android:id="@+id/pay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_pay_external_linearlayout_margin"
            android:onClick="pay"
            android:text="@string/item_pay_external_pay"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/h5pay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_pay_external_linearlayout_margin"
            android:onClick="h5Pay"
            android:text="@string/item_pay_external_pay_online"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</ScrollView>